fix layout issues landing page.

--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.scss
@@ -28,6 +28,8 @@
         }
     }
     .product-modal {
+        max-width: 1280px;
+        max-height: 720px;
         border-radius: 15px 15px 15px 15px;
         background-color: white;
         width: 85%;
@@ -57,6 +59,7 @@
                 z-index: 1000;
                 left: 0;
                 background-color: $main-color;
+                padding: 5px 8px;
             }
             .slideshow {
                 position: relative;
