--- a/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.scss
+++ b/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.scss
@@ -42,7 +42,7 @@
                     font-size: 1.1em;
                     text-transform: uppercase;
                     background-color: $main-color;
-                    padding: 2px;
+                    padding: 5px 8px;
                 }
                 h1{
                     font-size: 1.5em;
